<resources>
    <string name="app_name">Novus Mens</string>

    <string name="level1_btn1">Enigme narrative maison abandonnée</string>
    <string name="level1_btn2">Enigme racine</string>
    <string name="level1_btn3">PNJ besoin deux objets</string>
    <string name="level1_btn4">Enigme Jarres</string>
    <string name="level1_btn5">Sortie</string>
    <string name="level1_btn6">Enigme Ordinateur Mdp</string>
    <string name="level1_btn7">Enigme narrative desert magnetique</string>
    <string name="level1_btn8">Point bloqué</string>
    <string name="level1_btn9">Enigme blocs</string>
    <string name="level1_btn10">Enigme narrative pluies acides</string>

    <string name="descEnigmeOrdi">Une inscription étrange se trouve sur le mur : \"Persevez le monde sous un autre angle et suivez le lapin blanc. Ainsi vous trouverez le mot de passe\".</string>
    <string name="inputEnigmeOrdi"> > </string>
    <string name="level1_enigmeOrdi_imgBtn">Image bouton flèche retour</string>

    <string name="descEnigmeJarres">
        Un mécanisme étrange se présente devant vous. Trois réservoirs sont alignés. Le premier
        porte l\'inscription 10, le deuxième 7 et le dernier 3. Le premier reservoir est rempli
        d\'un liquide fluorescent. Au dessus, gravé dans la pierre, un message : \"L\'équité sera
        la voie vers le monde que tu recherches\".
    </string>
    <string name="tipEnigmeJarres">Partagez le contenu du premier réservoir en 2!</string>
    <string name="level1_enimgeJarres_10l">Bouton 10 litres</string>
    <string name="level1_enimgeJarres_7l">Bouton 7 litres</string>
    <string name="level1_enimgeJarres_3l">Bouton 3 litres</string>

    <string name="capacite10l">Max = 10L</string>
    <string name="capacite7l">Max = 7L</string>
    <string name="capacite3l">Max = 3L</string>

    <string name="pointPNJ_dialogStart">Futile créature, tu viens troubler mon agonie. J\'ai souffert bien plus que tu ne pourras jamais imaginer.</string>
    <string name="pointPNJ_btnAgree1">Je te comprends</string>
    <string name="pointPNJ_btnDisagree1">Je ne devrais pas rester là</string>
    <string name="pointPNJ_dialogProposition">Tu crois pouvoir m\'aider ? Pff...tss. Dans ce cas, retrouve l\'âme que l\'humain m\'a volé.</string>
    <string name="pointPNJ_btnAgree2">J\'accepte</string>
    <string name="pointPNJ_btnDisagree2">Je ne peux pas</string>
    <string name="pointPNJ_dialogEnd">Grrr...il fait froid dans ce temps gris</string>
    <string name="pointPNJ_txtResolu">Je vois que tu détiens quelque chose qui m\'est cher...</string>
    <string name="pointPNJ_btnRendre">Rendre l\'âme (à qui elle appartient)</string>
    <string name="pointPNJ_btnPasMaintenant">Ce n\'est pas le bon moment</string>

    <string name="pointBloque_desc">Elle est là. Devant vous. Celle que vous croyiez avoir oublié. Si fragile et si forte à la fois. Elle n\'a pas de coeur qui bat mais le vôtre resonne à sa vue.</string>
    <string name="pointBloque_btnTake">L\'emmener avec vous</string>
    <string name="pointBloque_txtTake">Vous prenez délicatement cette petite pousse de vie.</string>
    <string name="pointBloque_btnLet">La laisser ici</string>
    <string name="pointBloque_txtLet">Vous préférez ne pas y toucher et continuer à explorer les environs.</string>

    <string name="sortie_desc">Vous sentez une forte présence habiter ces lieux. Au pied du totem, une petite engravure semble attendre quelque chose. En vous approchant vous découvrez une inscription : \"Ce rêve n\'est pas le tient, c\'est celui d\'un monde oublié et perdu\".</string>
    <string name="sortie_put">Déposer la pousse d\'espoir</string>

</resources>
