<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alignmentMode="alignBounds"
    android:orientation="horizontal"
    android:columnCount="10"
    android:rowCount="5"
    android:background="@drawable/backgroundl1"
    android:useDefaultMargins="false"
    android:padding="10dp">


    <ImageButton
        android:layout_width="@dimen/map_button_size"
        android:layout_height="@dimen/map_button_size"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/buttonmap"
        android:id="@+id/btn1_narrationMaisonAbandonnee"
        android:contentDescription="@string/level1_btn1"
        android:background="@drawable/roundedbutton"
        android:layout_marginStart="@dimen/map_button_marginLeft"
        android:layout_marginEnd="@dimen/map_button_marginRight"
        android:layout_marginTop="@dimen/map_button_marginTop"
        android:layout_column="7"
        android:layout_row="0" />

    <ImageButton
        android:layout_width="@dimen/map_button_size"
        android:layout_height="@dimen/map_button_size"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/buttonmap"
        android:id="@+id/btn2_enigmeRacine"
        android:contentDescription="@string/level1_btn2"
        android:background="@drawable/roundedbutton"
        android:layout_marginStart="@dimen/map_button_marginLeft"
        android:layout_marginEnd="@dimen/map_button_marginRight"
        android:layout_marginTop="@dimen/map_button_marginTop"
        android:layout_column="1"
        android:layout_row="1" />

    <ImageButton
        android:layout_width="@dimen/map_button_size"
        android:layout_height="@dimen/map_button_size"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/buttonmap"
        android:id="@+id/btn3_pnj"
        android:contentDescription="@string/level1_btn3"
        android:background="@drawable/roundedbutton"
        android:layout_marginStart="@dimen/map_button_marginLeft"
        android:layout_marginEnd="@dimen/map_button_marginRight"
        android:layout_marginTop="@dimen/map_button_marginTop"
        android:layout_column="5"
        android:layout_row="1" />

    <ImageButton
        android:layout_width="@dimen/map_button_size"
        android:layout_height="@dimen/map_button_size"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/buttonmap"
        android:id="@+id/btn4_enigmeJarres"
        android:contentDescription="@string/level1_btn4"
        android:background="@drawable/roundedbutton"
        android:layout_marginStart="@dimen/map_button_marginLeft"
        android:layout_marginEnd="@dimen/map_button_marginRight"
        android:layout_marginTop="@dimen/map_button_marginTop"
        android:layout_column="8"
        android:layout_row="1"/>

    <ImageButton
        android:layout_width="@dimen/map_button_size"
        android:layout_height="@dimen/map_button_size"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/buttonmap"
        android:id="@+id/btn5_sortie"
        android:contentDescription="@string/level1_btn5"
        android:background="@drawable/roundedbutton"
        android:layout_marginStart="@dimen/map_button_marginLeft"
        android:layout_marginEnd="@dimen/map_button_marginRight"
        android:layout_marginTop="@dimen/map_button_marginTop"
        android:layout_column="3"
        android:layout_row="2"/>

    <ImageButton
        android:layout_width="@dimen/map_button_size"
        android:layout_height="@dimen/map_button_size"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/buttonmap"
        android:id="@+id/btn6_enigmeOrdi"
        android:contentDescription="@string/level1_btn6"
        android:background="@drawable/roundedbutton"
        android:layout_marginStart="@dimen/map_button_marginLeft"
        android:layout_marginEnd="@dimen/map_button_marginLeft"
        android:layout_marginTop="@dimen/map_button_marginTop"
        android:layout_column="6"
        android:layout_row="2" />

    <ImageButton
        android:layout_width="@dimen/map_button_size"
        android:layout_height="@dimen/map_button_size"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/buttonmap"
        android:id="@+id/btn7_narrationDesertMagnetique"
        android:contentDescription="@string/level1_btn7"
        android:background="@drawable/roundedbutton"
        android:layout_marginStart="@dimen/map_button_marginLeft"
        android:layout_marginEnd="@dimen/map_button_marginRight"
        android:layout_marginTop="@dimen/map_button_marginTop"
        android:layout_column="7"
        android:layout_row="3"/>

    <ImageButton
        android:layout_width="@dimen/map_button_size"
        android:layout_height="@dimen/map_button_size"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/buttonmap"
        android:id="@+id/btn8_pointBloqué"
        android:contentDescription="@string/level1_btn8"
        android:background="@drawable/roundedbutton"
        android:layout_marginStart="@dimen/map_button_marginLeft"
        android:layout_marginEnd="@dimen/map_button_marginRight"
        android:layout_marginTop="@dimen/map_button_marginTop"
        android:layout_column="2"
        android:layout_row="4" />

    <ImageButton
        android:layout_width="@dimen/map_button_size"
        android:layout_height="@dimen/map_button_size"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/buttonmap"
        android:id="@+id/btn9_enigmeBloc"
        android:contentDescription="@string/level1_btn9"
        android:background="@drawable/roundedbutton"
        android:layout_marginStart="@dimen/map_button_marginLeft"
        android:layout_marginEnd="@dimen/map_button_marginRight"
        android:layout_marginTop="@dimen/map_button_marginTop"
        android:layout_column="5"
        android:layout_row="4"/>

    <ImageButton
        android:layout_width="@dimen/map_button_size"
        android:layout_height="@dimen/map_button_size"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/buttonmap"
        android:id="@+id/btn10_narrationPluiesAcides"
        android:contentDescription="@string/level1_btn10"
        android:background="@drawable/roundedbutton"
        android:layout_marginStart="@dimen/map_button_marginLeft"
        android:layout_marginEnd="@dimen/map_button_marginRight"
        android:layout_marginTop="@dimen/map_button_marginTop"
        android:layout_column="8"
        android:layout_row="4" />

</GridLayout>

