<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:weightSum="1"
    android:background="@drawable/bombe_h"
    android:orientation="vertical"> <!--"@drawable/backgroundl1"-->


    <TextView
        android:text="@string/descEnigmeJarres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDescription"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_weight="0.43"
        android:gravity="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:weightSum="1"
        android:layout_weight="0.20">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="60dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/arrowjarres"
            android:id="@+id/imgBtn10l"
            android:contentDescription="@string/level1_enimgeJarres_10l" />

        <ImageButton
            android:clickable="false"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="130dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/arrowjarres"
            android:id="@+id/imgBnt7l"
            android:contentDescription="@string/level1_enimgeJarres_7l"/>

        <ImageButton
            android:clickable="false"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="130dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/arrowjarres"
            android:id="@+id/imgBtn3l"
            android:contentDescription="@string/level1_enimgeJarres_3l"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="10L"
            android:textAlignment="center"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="63dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:id="@+id/textViewcontenance10l"
            android:background="#50A8A9"/>

        <TextView
            android:text="0L"
            android:textAlignment="center"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="135dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:id="@+id/textViewcontenance7l"
            android:background="#FFE6E6"/>

        <TextView
            android:text="0L"
            android:textAlignment="center"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="135dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:id="@+id/textViewcontenance3l"
            android:background="#567A88"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="59dp">

        <TextView
            android:text="@string/capacite10l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_gravity="center"
            android:padding="5dp"
            android:textSize="17sp"
            android:id="@+id/textViewcapacite10l"
            android:background="#50A8A9"/>

        <TextView
            android:text="@string/capacite7l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="105dp"
            android:layout_gravity="center"
            android:padding="5dp"
            android:textSize="17sp"
            android:id="@+id/textViewcapacite7l"
            android:background="#FFE6E6"/>

        <TextView
            android:text="@string/capacite3l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_gravity="center"
            android:padding="5dp"
            android:textSize="17sp"
            android:id="@+id/textViewcapacite3l"
            android:background="#567A88"/>

    </LinearLayout>

</LinearLayout>
