<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_point_bloque"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/nature_way_resize_recolor"
    tools:context="com.math.novusmens_git.enigme.EnigmePointBloqueActivity">

    <TextView
        android:text="@string/pointBloque_desc"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:id="@+id/txtDescPointBloque"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@drawable/border"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/pointBloque_btnTake"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/btnTakePointBloque"
        android:layout_marginTop="63dp"
        android:background="@drawable/border"
        android:textColor="@color/white"
        android:layout_below="@+id/txtDescPointBloque"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/pointBloque_btnLet"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_marginRight="20dp"
        android:id="@+id/btnLetPointBloque"
        android:background="@drawable/border"
        android:textColor="@color/white"
        android:layout_alignBaseline="@+id/btnTakePointBloque"
        android:layout_alignBottom="@+id/btnTakePointBloque"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
