<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_point_pnj"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backgroundl1"
    tools:context="com.math.novusmens_git.niveau.PointPNJActivity">

    <TextView
        android:text="@string/pointPNJ_dialogStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/txtViewPNJ" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:srcCompat="@drawable/fox_head"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/txtViewPNJ"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/imgViewPNJ" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/wolf_head"
        android:id="@+id/imgViewPlayer"
        android:layout_below="@+id/txtViewPNJ"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/txtViewPNJ"
        android:layout_toEndOf="@+id/imgViewPlayer"
        android:layout_alignBottom="@+id/imgViewPlayer">

        <Button
            android:text="@string/pointPNJ_btnAgree1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/btnAgree" />

        <Button
            android:text="@string/pointPNJ_btnDisagree1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/btnDisagree" />
    </LinearLayout>

</RelativeLayout>
